kubernetes files/jenkins/jenkins-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins/jenkins:lts-jdk11
        ports:
        - containerPort: 8080
        - containerPort: 50000
        volumeMounts:
        - name: jenkins-data
          mountPath: /var/jenkins_home
        - name: home-dir
          mountPath: /root
      volumes:
      - name: jenkins-data
        persistentVolumeClaim:
          claimName: jenkins-data-pvc
      - name: home-dir
        persistentVolumeClaim:
          claimName: jenkins-pod-home-dir-pvc
      securityContext:
        fsGroup: 1000
        runAsUser: 0
